Refactored Clustering