@@ -1,80 +1,81 @@
 package businessLogicLayer;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Random;
-
 import modelLayer.Cluster;
+import modelLayer.ClusterStorage;
 import modelLayer.Tweet;
 import modelLayer.TweetStorage;
+import java.util.Random;
 
 public class Clustering {
-	
-	public static List<Cluster> tweetClustering (TweetStorage tweets, double facilityCost) {
+
+	public static ClusterStorage clusterTweets (TweetStorage tweets, double facilityCost) {
 		TweetStorage geotaggedTweets = tweets.getGeotaggedTweets();
-		
+
 		System.out.println("Start of clustering. Doing initial solution.");
-		List<Cluster> clusters = initialSolution(geotaggedTweets, facilityCost);
-		
-		System.out.println("Initial solution done. Starting refinement process.");		
-		// TODO I'm not sure if it's log of cluster size or clonedTweets size. The paper didn't make this clear.
-		// Maybe move this loop to refineClusters. Should give more accurate updates of clusters, but worse performance.
-		int iterations = (int) Math.log(clusters.size());
-		for (int i = 0; i < iterations; i++) {
-			System.out.println("Doing refinement step " + (i + 1) + " of " + iterations + ".");
-			refineClusters(geotaggedTweets, geotaggedTweets, facilityCost, clusters);
-		}
-		
+		ClusterStorage clusters = initialSolution(geotaggedTweets, facilityCost);
+
+		System.out.println("Initial solution done. Starting refinement process.");
+		refineClusters(clusters, geotaggedTweets, geotaggedTweets, facilityCost);
+
 		System.out.println("Clustering done.");
 		return clusters;
 	}
 
-	public static void updateClusters (List<Cluster> clusters, TweetStorage newTweets, TweetStorage allTweets, double facilityCost) {
-		TweetStorage geotaggedTweets = newTweets.getGeotaggedTweets();
-		for (Tweet t : geotaggedTweets) {
-			t.setCluster(getNearestCluster(clusters, t));
+	public static void updateClusters (ClusterStorage clusters, TweetStorage tweets, double facilityCost) {
+		TweetStorage newTweets = tweets.getGeotaggedTweets().getUnclusteredTweets();
+
+		for (Tweet t : newTweets) {
+			Cluster c = getNearestCluster(clusters, t);
+			c.addTweet(t);
 		}
-		refineClusters(geotaggedTweets, allTweets.getGeotaggedTweets(), facilityCost, clusters);
+		
+		refineClusters(clusters, tweets, newTweets, facilityCost);
 	}
-	
-	private static void refineClusters(TweetStorage newTweets, TweetStorage allTweets, double facilityCost, List<Cluster> clusters) {
-		for (Tweet t : newTweets.getRandomizedCopy()) {
-			checkGainAndReassign(t, clusters, allTweets, facilityCost);
+
+	private static void refineClusters(ClusterStorage clusters, TweetStorage allTweets, TweetStorage newTweets, double facilityCost) {
+		// TODO I'm not sure if it's log of cluster size or clonedTweets size. The paper didn't make this clear.
+		int iterations = (int) Math.log(clusters.size());
+		for (int i = 0; i < iterations; i++) {
+			System.out.println("Doing refinement step " + (i + 1) + " of " + iterations + ".");
+			for (Tweet t : newTweets.getRandomizedCopy()) {
+				checkGainAndReassign(clusters, allTweets, t, facilityCost);
+			}
 		}
 	}
-	
-	private static List<Cluster> initialSolution (TweetStorage tweets, double facilityCost) {
+
+	private static ClusterStorage initialSolution (TweetStorage tweets, double facilityCost) {
 		TweetStorage randomizedTweets = tweets.getRandomizedCopy();
 		Random rand = new Random();
-		List<Cluster> clusters = new ArrayList<Cluster>();
-		
-		Cluster cluster = Cluster.createCluster(randomizedTweets.getFirst());
+		ClusterStorage clusters = new ClusterStorage();
+
+		Cluster cluster = new Cluster(randomizedTweets.get(0));
 		clusters.add(cluster);
-		
+
 		for (int i = 1; i < randomizedTweets.size(); i++) {
 			Tweet tweet = randomizedTweets.get(i);
-			
+
 			Cluster nearestCluster = getNearestCluster(clusters, tweet);
 			double dist = getDist(nearestCluster.getCenter(), tweet);
 			double prob = dist / facilityCost;
 
 			double r = rand.nextDouble();
 			if (r <= prob) {
-				cluster = Cluster.createCluster(tweet);
+				cluster = new Cluster(tweet);
 				clusters.add(cluster);
 			}
 			else {
-				Cluster.reassignTweet(tweet, nearestCluster);
+				nearestCluster.addTweet(tweet);
 			}
 		}
+		
 		return clusters;
 	}
-	
-	private static void checkGainAndReassign(Tweet tweet, List<Cluster> clusters, TweetStorage tweets, double facilityCost) {	
+
+	private static void checkGainAndReassign(ClusterStorage clusters, TweetStorage tweets, Tweet tweet, double facilityCost) {	
 		TweetStorage reassignmentList = new TweetStorage();
-		List<Cluster> removalList = new ArrayList<Cluster>();
+		ClusterStorage removalList = new ClusterStorage();
 		double gain = -facilityCost;
-		
+
 		for (Tweet t : tweets) {
 			double d1 = getDist(t, t.getCluster().getCenter());
 			double d2 = getDist(t, tweet);
@@ -84,34 +85,34 @@ public class Clustering {
 				reassignmentList.add(t);
 			}
 		}
-		
+
 		for (Cluster c : clusters) {
 			double removalGain = facilityCost;
-			TweetStorage tweetDifference = TweetStorage.getDifference(c.getTweets(), reassignmentList);
-			for (Tweet t : tweetDifference) {
+			TweetStorage notReassignedTweets = TweetStorage.getDifference(c.getTweets(), reassignmentList);
+			for (Tweet t : notReassignedTweets) {
 				double d1 = getDist(t, t.getCluster().getCenter());
 				double d2 = getDist(t, tweet);
 				removalGain +=  d1 - d2;
 			}
-			if (removalGain > 0) {
+			if (removalGain >= 0) {
 				gain += removalGain;
 				removalList.add(c);
-				reassignmentList.addAll(tweetDifference);
+				reassignmentList.addAll(notReassignedTweets);
 			}
 		}
-		
+
 		if (gain > 0) {
-			Cluster c = Cluster.createCluster(tweet);
+			Cluster c = new Cluster(tweet);
 			for (Tweet t : reassignmentList) {
-				Cluster.reassignTweet(t, c);
+				c.addTweet(t);
 			}
 			clusters.removeAll(removalList);
 			clusters.add(c);
 		}
 	}
-	
-	// TODO Maybe return both cluster and distance? And maybe private
-	public static Cluster getNearestCluster(List<Cluster> clusters, Tweet tweet) {
+
+	// TODO Maybe return both cluster and distance?
+	private static Cluster getNearestCluster(ClusterStorage clusters, Tweet tweet) {
 		double dist = Double.POSITIVE_INFINITY;
 		Cluster c = null;
 
@@ -125,7 +126,7 @@ public class Clustering {
 
 		return c;
 	}
-	
+
 	// TODO Maybe move distance methods to a different class
 	public static double getDist(Tweet t1, Tweet t2) {
 		double R = 6371;	//Earths radius
@@ -134,11 +135,11 @@ public class Clustering {
 		double a = Math.sin(deltaLat / 2) * Math.sin(deltaLat / 2) +
 				Math.cos(toRadians(t1.getLat())) * Math.cos(toRadians(t2.getLat())) *
 				Math.sin(deltaLon / 2) * Math.sin(deltaLon / 2);
-		
+
 		double c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
 		return (R * c) * 1000;
 	}
-	
+
 	private static double toRadians(double degree)
 	{
 		return degree * Math.PI / 180;
